--- a/Frontend/my-app/src/style/Button.css
+++ b/Frontend/my-app/src/style/Button.css
@@ -9,11 +9,11 @@
   }
   
   .btn.update {
-    background-color: #17a2b8;
+    background-color: #14616c;
   }
   
   .btn.update:hover {
-    background-color: #138496;
+    background-color: #2b94a4;
   }
   
   .btn.delete {
