--- a/Frontend/my-app/src/style/OrderTable.css
+++ b/Frontend/my-app/src/style/OrderTable.css
@@ -1,22 +1,22 @@
-.employee-table {
+.order-table {
     width: 80%;
     margin: 0 auto;
     border-collapse: collapse;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
   
-  .employee-table th, .employee-table td {
+  .order-table th, .order-table td {
     border: 1px solid #ddd;
     padding: 10px;
     text-align: center;
   }
   
-  .employee-table th {
+  .order-table th {
     background-color: #f4f4f4;
     font-weight: bold;
   }
   
-  .employee-table tr:nth-child(even) {
+  .order-table tr:nth-child(even) {
     background-color: #f9f9f9;
   }
   
